demos finally run on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,53 +20,29 @@ IF(WIN32)
 	SET(gtest_force_shared_crt ON)
 ENDIF(WIN32)
 
-IF(BUILD_DEMOS)
-	SET(BUILD_glew ON)
-
-	SET(BUILD_glfw ON)
-	SET(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
-	SET(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
-	SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
-
-	SET(FIND_OpenGL ON)
-ENDIF()
-
-IF(BUILD_TESTS)
-	SET(BUILD_gtest ON)
-ENDIF()
-
 FIND_PACKAGE(OpenCL REQUIRED)
-
-IF (BUILD_gtest)
-	ADD_SUBDIRECTORY(dependencies/googletest EXCLUDE_FROM_ALL)
-	SET(gtest_INCLUDE_DIRS "${gtest_SOURCE_DIR}/include ${gmock_SOURCE_DIR}/include")
-ENDIF()
-
-IF (BUILD_glfw)
-	ADD_SUBDIRECTORY(dependencies/glfw EXCLUDE_FROM_ALL)
-	SET(glfw_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/glfw/include")
-ENDIF()
-
-IF (BUILD_glew)
-	ADD_SUBDIRECTORY(dependencies/glew EXCLUDE_FROM_ALL)
-	SET(glew_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/glew/include")
-	ADD_LIBRARY(glew ALIAS libglew_static)
-ENDIF()
-
-IF (FIND_OpenGL)
-	FIND_PACKAGE(OpenGL REQUIRED)
-	SET(OpenGL_INCLUDE_DIRS "${OPENGL_INCLUDE_DIRS}")
-ENDIF()
-
 
 ADD_SUBDIRECTORY(lib)
 SET(NRASTER_ALL_INCLUDES ${PROJECT_SOURCE_DIR}/lib/inc)
 
 IF(BUILD_DEMOS)
+	ADD_SUBDIRECTORY(dependencies/glew EXCLUDE_FROM_ALL)
+	SET(glew_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/glew/include")
+	ADD_LIBRARY(glew ALIAS libglew_shared)
+
+	ADD_SUBDIRECTORY(dependencies/glfw EXCLUDE_FROM_ALL)
+	SET(glfw_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/glfw/include")
+	
+	FIND_PACKAGE(OpenGL REQUIRED)
+	SET(OpenGL_INCLUDE_DIRS "${OPENGL_INCLUDE_DIRS}")
+	
 	ADD_SUBDIRECTORY(demo)
 ENDIF()
 
 IF(BUILD_TESTS)	
+	ADD_SUBDIRECTORY(dependencies/googletest EXCLUDE_FROM_ALL)
+	SET(gtest_INCLUDE_DIRS "${gtest_SOURCE_DIR}/include ${gmock_SOURCE_DIR}/include")
+
 	ADD_SUBDIRECTORY(test)
 	ENABLE_TESTING()
 	ADD_TEST(NAME AllTests COMMAND NrasterTest) # run the executable itself for a better log as it uses GTest
