--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,7 +17,7 @@ TARGET_INCLUDE_DIRECTORIES(NrasterTest
 
 if(WIN32)
     # Copy DLL files to output directory
-    add_custom_command(TARGET NrasterTest POST_BUILD
+    add_custom_command(TARGET NrasterTest PRE_LINK
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "${PROJECT_BINARY_DIR}/lib/Nraster.dll"             
     $<TARGET_FILE_DIR:NrasterTest>)
