--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -11,7 +11,7 @@ ADD_LIBRARY(NrasterDemoUtils src/utils.cpp src/linalg.cpp)
 
 TARGET_LINK_LIBRARIES(NrasterDemoUtils 
 	PUBLIC Nraster
-	PUBLIC OpenGL
+	PUBLIC opengl32
 	PUBLIC glfw
 	PUBLIC glew)
 
@@ -22,9 +22,41 @@ ADD_EXECUTABLE(Cube4d src/cube4d.cpp)
 TARGET_LINK_LIBRARIES(Cube4d NrasterDemoUtils)
 
 if(WIN32)
-    # Copy DLL files to output directory
-	ADD_CUSTOM_COMMAND(TARGET Triangle3d PRE_LINK
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    "${PROJECT_BINARY_DIR}/lib/Nraster.dll"         
-    $<TARGET_FILE_DIR:Triangle3d>)
+    # Copy DLL files to output directory. Yes, this is digusting, but nothing else worked :(
+	
+	ADD_CUSTOM_COMMAND(TARGET Triangle3d POST_BUILD
+		COMMAND ${CMAKE_COMMAND} -E copy_if_different
+		"${PROJECT_BINARY_DIR}/lib/Nraster.dll"         
+		$<TARGET_FILE_DIR:Triangle3d>
+	)
+		
+	ADD_CUSTOM_COMMAND(TARGET Cube4d POST_BUILD
+		COMMAND ${CMAKE_COMMAND} -E copy_if_different
+		"${PROJECT_BINARY_DIR}/lib/Nraster.dll"         
+		$<TARGET_FILE_DIR:Cube4d>
+	)
+
+	IF(CMAKE_BUILD_TYPE STREQUAL Debug)
+		ADD_CUSTOM_COMMAND(TARGET Triangle3d POST_BUILD
+			COMMAND ${CMAKE_COMMAND} -E copy_if_different
+			"${PROJECT_BINARY_DIR}/bin/glewd.dll"         
+			$<TARGET_FILE_DIR:Triangle3d>
+		)
+		ADD_CUSTOM_COMMAND(TARGET Cube4d POST_BUILD
+			COMMAND ${CMAKE_COMMAND} -E copy_if_different
+			"${PROJECT_BINARY_DIR}/bin/glewd.dll"         
+			$<TARGET_FILE_DIR:Cube4d>
+		)	
+	ELSE()
+		ADD_CUSTOM_COMMAND(TARGET Triangle3d POST_BUILD
+			COMMAND ${CMAKE_COMMAND} -E copy_if_different
+				"${PROJECT_BINARY_DIR}/bin/glew.dll"         
+				$<TARGET_FILE_DIR:Triangle3d>
+		)
+		ADD_CUSTOM_COMMAND(TARGET Cube4d POST_BUILD
+			COMMAND ${CMAKE_COMMAND} -E copy_if_different
+				"${PROJECT_BINARY_DIR}/bin/glew.dll"         
+				$<TARGET_FILE_DIR:Cube4d>
+		)
+	ENDIF()
 endif()
