--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -21,6 +21,9 @@ ADD_LIBRARY(Nraster SHARED
 
 TARGET_COMPILE_DEFINITIONS(Nraster PRIVATE NR_EXPORT)
 
+MESSAGE(${CMAKE_CXX_FLAGS})
+MESSAGE(${CMAKE_CXX_FLAGS_DEBUG})
+
 TARGET_LINK_LIBRARIES(Nraster
 	PUBLIC ${OpenCL_LIBRARIES})
 
