began writing extensive rasterizer test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,9 @@ IF(BUILD_DEMOS)
 	SET(glew_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/glew/include")
 	ADD_LIBRARY(glew ALIAS libglew_shared)
 
+	SET(GLFW_BUILD_EXAMPLES OFF)
+	SET(GLFW_BUILD_TESTS OFF)
+	SET(GLFW_BUILD_DOCS OFF)
 	ADD_SUBDIRECTORY(dependencies/glfw EXCLUDE_FROM_ALL)
 	SET(glfw_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/glfw/include")
 	
