--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -21,6 +21,7 @@ ADD_LIBRARY(Nraster SHARED
 	src/pipeline/FineRasterizer.cpp
 	src/pipeline/SimplexReducer.cpp
 	src/pipeline/VertexShader.cpp
+	src/pipeline/Pipeline.cpp
 
 	src/utils/converters.cpp)
 
