implementing in-lib Pipeline

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -22,6 +22,7 @@ ADD_LIBRARY(Nraster SHARED
 	src/pipeline/SimplexReducer.cpp
 	src/pipeline/VertexShader.cpp
 	src/pipeline/Pipeline.cpp
+	src/pipeline/VertexBuffer.cpp
 
 	src/utils/converters.cpp)
 
