debugging raster pipeline

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -34,3 +34,6 @@ TARGET_LINK_LIBRARIES(Nraster
 TARGET_INCLUDE_DIRECTORIES(Nraster
 	PUBLIC ${OpenCL_INCLUDE_DIRS}
 	PUBLIC inc)
+	
+MESSAGE(${OpenCL_INCLUDE_DIRS})
+MESSAGE(${OpenCL_LIBRARIES})
