--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,6 +16,6 @@ if(WIN32)
     # Copy DLL files to output directory
     ADD_CUSTOM_COMMAND(TARGET NrasterTest PRE_LINK
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    "${PROJECT_BINARY_DIR}/lib/Nraster.dll"             
+    "${PROJECT_BINARY_DIR}/project/Nraster.dll"             
     $<TARGET_FILE_DIR:NrasterTest>)
 endif()
