--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -14,9 +14,11 @@ ADD_LIBRARY(Nraster SHARED
 	src/kernels/bin_rasterizer.cl.cpp
 	src/kernels/fine_rasterizer.cl.cpp
 	src/kernels/vertex_reducer.cl.cpp
+	src/kernels/vertex_post_processor.cl.cpp
 	
 	src/pipeline/BinRasterizer.cpp
 	src/pipeline/FineRasterizer.cpp
+	src/pipeline/VertexPostProcessor.cpp
 	src/pipeline/VertexReducer.cpp
 	src/pipeline/Pipeline.cpp
 	src/pipeline/Source.cpp
