--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -8,23 +8,7 @@ ADD_LIBRARY(Nraster SHARED
 	src/base/Event.cpp
 	src/base/Kernel.cpp
 	src/base/Module.cpp
-	src/base/Platform.cpp
-	
-	src/kernels/base.cl.cpp
-	src/kernels/bin_rasterizer.cl.cpp
-	src/kernels/fine_rasterizer.cl.cpp
-	src/kernels/vertex_reducer.cl.cpp
-	src/kernels/vertex_post_processor.cl.cpp
-	
-	src/pipeline/BinRasterizer.cpp
-	src/pipeline/FineRasterizer.cpp
-	src/pipeline/VertexPostProcessor.cpp
-	src/pipeline/VertexReducer.cpp
-	src/pipeline/Pipeline.cpp
-	src/pipeline/Source.cpp
-
-	src/utils/converters.cpp
-	src/utils/rendermath.cpp)
+	src/base/Platform.cpp)
 
 TARGET_COMPILE_DEFINITIONS(Nraster PRIVATE NR_EXPORT)
 
