reorganized CMakeLists.txt

--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -2,13 +2,8 @@
 
 ADD_LIBRARY(Nraster SHARED
 	src/base/Buffer.cpp
-	src/base/CommandQueue.cpp
 	src/base/Context.cpp
-	src/base/Device.cpp
-	src/base/Event.cpp
-	src/base/Kernel.cpp
-	src/base/Module.cpp
-	src/base/Platform.cpp)
+	src/base/Exceptions.cpp)
 
 TARGET_LINK_LIBRARIES(Nraster
 	PUBLIC ${OpenCL_LIBRARIES})
