--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -1,9 +1,13 @@
 # main Nraster library
 
 ADD_LIBRARY(Nraster SHARED
-	src/base/Buffer.cpp
-	src/base/Context.cpp
-	src/base/Exceptions.cpp)
+		src/base/Buffer.cpp
+		src/base/Context.cpp
+		src/base/Event.cpp
+		src/base/Exceptions.cpp
+		src/base/MemoryView.cpp
+        src/base/Platform.cpp
+		src/base/RootDevice.cpp)
 
 TARGET_LINK_LIBRARIES(Nraster
 	PUBLIC ${OpenCL_LIBRARIES})
