--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -5,6 +5,7 @@ ADD_LIBRARY(Nraster SHARED
 		src/base/Context.cpp
 		src/base/Event.cpp
 		src/base/Exceptions.cpp
+		src/base/Kernel.cpp
 		src/base/MemoryView.cpp
         src/base/Platform.cpp
 		src/base/RootDevice.cpp)
