--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -6,6 +6,7 @@ ADD_LIBRARY(Nraster SHARED
 		src/base/Event.cpp
 		src/base/Exceptions.cpp
 		src/base/Kernel.cpp
+		src/base/Module.cpp
 		src/base/Platform.cpp
 		src/base/RootDevice.cpp)
 
