moved project/src into src, removed project/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ ENDIF(WIN32)
 FIND_PACKAGE(OpenCL REQUIRED)
 
 # Adding Nraster itself
-ADD_SUBDIRECTORY(project)
+ADD_SUBDIRECTORY(src)
 SET(NRASTER_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/project/include)
 
 IF(BUILD_TESTS)	
