--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 # main Nraster library
 
-ADD_LIBRARY(Nraster SHARED
+ADD_LIBRARY(NrasterBackend STATIC
 		base/Buffer.cpp
 		base/CommandQueue.cpp
 		base/Context.cpp
@@ -12,9 +12,4 @@ ADD_LIBRARY(Nraster SHARED
 		base/RootDevice.cpp
 		base/Views.cpp)
 
-TARGET_LINK_LIBRARIES(Nraster
-	PUBLIC ${OpenCL_LIBRARIES})
-
-TARGET_INCLUDE_DIRECTORIES(Nraster
-	PUBLIC ${OpenCL_INCLUDE_DIRS})
-	
+TARGET_LINK_LIBRARIES(NrasterBackend PUBLIC OpenCL::OpenCL)
