--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,16 +1,5 @@
-ADD_EXECUTABLE(NrasterTest src/tests.cpp)
+INCLUDE(GoogleTest)
 
-TARGET_LINK_LIBRARIES(NrasterTest
-	PRIVATE gtest
-	PRIVATE gmock)
-
-TARGET_INCLUDE_DIRECTORIES(NrasterTest 
-	PRIVATE ${gtest_INCLUDE_DIRS})
-
-if(WIN32)
-    # Copy DLL files to output directory
-    ADD_CUSTOM_COMMAND(TARGET NrasterTest PRE_LINK
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    "${PROJECT_BINARY_DIR}/project/Nraster.dll"             
-    $<TARGET_FILE_DIR:NrasterTest>)
-endif()
+ADD_EXECUTABLE(NrasterTests src/base/TestSimpleUsage.cpp)
+TARGET_LINK_LIBRARIES(NrasterTests gtest gmock gtest_main)
+gtest_discover_tests(NrasterTests)
