code now has a test sample

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,7 @@
 INCLUDE(GoogleTest)
 
 ADD_EXECUTABLE(NrasterTests src/base/TestSimpleUsage.cpp)
-TARGET_LINK_LIBRARIES(NrasterTests gtest gmock gtest_main)
+TARGET_LINK_LIBRARIES(NrasterTests gtest gmock gtest_main NrasterBackend)
+TARGET_INCLUDE_DIRECTORIES(NrasterTests PRIVATE "../src")
+
 gtest_discover_tests(NrasterTests)
