removed MemoryView and Views file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 # main Nraster library
 
 ADD_LIBRARY(NrasterBackend STATIC
-		base/Buffer.cpp
+		base/Memory.cpp
 		base/CommandQueue.cpp
 		base/Context.cpp
 		base/Event.cpp
@@ -10,7 +10,7 @@ ADD_LIBRARY(NrasterBackend STATIC
 		base/Module.cpp
 		base/Platform.cpp
 		base/Device.cpp
-		base/Views.cpp)
+		)
 
 TARGET_LINK_LIBRARIES(NrasterBackend PUBLIC OpenCL::OpenCL)
 TARGET_INCLUDE_DIRECTORIES(NrasterBackend INTERFACE "../src")
