all fixes required for a basic sanity check

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,13 @@
 # main Nraster library
 
 ADD_LIBRARY(NrasterBackend STATIC
-		base/Memory.cpp
+        base/Buffer.cpp
 		base/CommandQueue.cpp
 		base/Context.cpp
 		base/Event.cpp
 		base/Exceptions.cpp
 		base/Kernel.cpp
+		base/Memory.cpp
 		base/Module.cpp
 		base/Platform.cpp
 		base/Device.cpp
