--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -5,5 +5,5 @@ CONFIGURE_FILE(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
 ADD_CUSTOM_TARGET(docs ALL
 	COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
 	WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-	COMMENT "Generating Nraster documentation"
+	COMMENT "Generating vkr documentation"
 	VERBATIM)
