--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,22 +1,13 @@
-# main Nraster library
+# Main VulkanRasterizer libraries 
 
-ADD_LIBRARY(NrasterBackend STATIC
-        base/Buffer.cpp
-		base/CommandQueue.cpp
-		base/Context.cpp
-		base/Event.cpp
-		base/Exceptions.cpp
-		base/Kernel.cpp
-		base/Memory.cpp
-		base/Module.cpp
-		base/Platform.cpp
-		base/Device.cpp
+ADD_LIBRARY(vkr-backend STATIC
+        Example.cpp
 		)
 
-TARGET_COMPILE_OPTIONS(NrasterBackend PRIVATE
+TARGET_COMPILE_OPTIONS(vkr-backend PRIVATE
 		$<$<CXX_COMPILER_ID:MSVC>:/W4 /WX>
 		$<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Werror>
 		)
 
-TARGET_LINK_LIBRARIES(NrasterBackend PUBLIC Vulkan::Vulkan)
-TARGET_INCLUDE_DIRECTORIES(NrasterBackend INTERFACE "../src")
+TARGET_LINK_LIBRARIES(vkr-backend PUBLIC Vulkan::Vulkan)
+TARGET_INCLUDE_DIRECTORIES(vkr-backend INTERFACE "../src")
