--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,9 @@ TARGET_COMPILE_OPTIONS(vkr-tests PRIVATE
         $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Werror>
         )
 
-TARGET_LINK_LIBRARIES(vkr-tests PRIVATE Catch2::Catch2 PRIVATE vkr-backend)
+TARGET_LINK_LIBRARIES(vkr-tests
+        PRIVATE Catch2::Catch2
+        PRIVATE vkr-backend
+        PRIVATE vk-bootstrap::vk-bootstrap)
 
 catch_discover_tests(vkr-tests)
