--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,15 @@
-ADD_EXECUTABLE(vkr-tests src/Main.cpp src/example/TestFail.cpp)
+ADD_EXECUTABLE(vkr-tests
+        ${vk-bootstrap_SOURCE_DIR}/src/VkBootstrap.cpp
+        src/Main.cpp
+        src/example/TestFail.cpp)
 
 TARGET_LINK_LIBRARIES(vkr-tests
+        PRIVATE ${CMAKE_DL_LIBS}
         PRIVATE Catch2::Catch2
         PRIVATE vkr-backend
-        PRIVATE vk-bootstrap::vk-bootstrap
         INTERFACE vkr-global-compiler-opts)
+
+TARGET_INCLUDE_DIRECTORIES(vkr-tests
+        PRIVATE ${vk-bootstrap_SOURCE_DIR}/src)
 
 catch_discover_tests(vkr-tests)
