--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,9 +35,9 @@ IF(BUILD_TESTS)
 
     # Tests based on Catch2 suite
 	FetchContent_Declare(
-			catch2
-			GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-			GIT_TAG v2.13.3)
+            catch2
+            GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+            GIT_TAG v3.0.0-preview3)
     FetchContent_MakeAvailable(catch2)
 
     # Using vk-bootstrap for vulkan boilerplate
@@ -47,7 +47,7 @@ IF(BUILD_TESTS)
             GIT_TAG v0.2)
     FetchContent_MakeAvailable(vk-bootstrap)
 
-    INCLUDE(${catch2_SOURCE_DIR}/contrib/Catch.cmake)
+    INCLUDE(${catch2_SOURCE_DIR}/extras/Catch.cmake)
 
     ENABLE_TESTING()
 
