moved vulkan boilerplate code into VulkanContext

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 ADD_EXECUTABLE(vkr-tests
         ${vk-bootstrap_SOURCE_DIR}/src/VkBootstrap.cpp
+        src/vk-util/VulkanContext.cpp
         src/example/TestFail.cpp)
 
 TARGET_LINK_LIBRARIES(vkr-tests
