Added MemoryUtils files

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 ADD_EXECUTABLE(vkr-tests
         ${vk-bootstrap_SOURCE_DIR}/src/VkBootstrap.cpp
+        src/utils/MemoryUtils.cpp
         src/utils/VulkanError.cpp
         src/utils/VulkanContext.cpp
         src/utils/CommonVulkanResoruces.cpp
